export const snapshot = {};

snapshot[`Filter pages (allow all) 1`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".page.ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      loader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".page.jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: undefined,
      ext: ".page.json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".jsonc",
    },
    {
      engines: 1,
      ext: ".md",
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".njk",
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: undefined,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      loader: [AsyncFunction: yaml],
    },
  ],
  src: [
    "/",
    "/_includes",
    "/_includes/layout.js",
    "/multiple-async.page.js",
    "/multiple.page.js",
    "/simple.page.js",
  ],
}
`;

snapshot[`Filter pages (allow all) 2`] = `[]`;

snapshot[`Filter pages (allow all) 3`] = `
[
  {
    content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Multiple page 1</title>
    </head>
    <body>
      <main>Async Page 1</main>
    </body>
  </html>
  ',
    data: {
      children: "Async Page 1",
      content: "Async Page 1",
      date: [],
      layout: "layout.js",
      mergedKeys: [
        "tags",
      ],
      num: 1,
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(1)",
      title: "Multiple page 1",
      url: "/async/1/",
    },
    src: {
      asset: undefined,
      ext: ".page.js",
      path: "/multiple-async[0]",
      remote: undefined,
      slug: "multiple-async",
    },
  },
  {
    content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Multiple page 2</title>
    </head>
    <body>
      <main>Async Page 2</main>
    </body>
  </html>
  ',
    data: {
      children: "Async Page 2",
      content: "Async Page 2",
      date: [],
      layout: "layout.js",
      mergedKeys: [
        "tags",
      ],
      num: 2,
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(1)",
      title: "Multiple page 2",
      url: "/async/2/",
    },
    src: {
      asset: undefined,
      ext: ".page.js",
      path: "/multiple-async[1]",
      remote: undefined,
      slug: "multiple-async",
    },
  },
  {
    content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Page 1</title>
    </head>
    <body>
      <main>Content page 1</main>
    </body>
  </html>
  ',
    data: {
      children: "Content page 1",
      content: "Content page 1",
      date: [],
      layout: "layout.js",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(1)",
      title: "Page 1",
      url: "/multiple/1.html",
    },
    src: {
      asset: undefined,
      ext: ".page.js",
      path: "/multiple[0]",
      remote: undefined,
      slug: "multiple",
    },
  },
  {
    content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Default title</title>
    </head>
    <body>
      <main>Content page 2</main>
    </body>
  </html>
  ',
    data: {
      children: "Content page 2",
      content: "Content page 2",
      date: [],
      layout: "layout.js",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(1)",
      url: "/multiple/2.html",
    },
    src: {
      asset: undefined,
      ext: ".page.js",
      path: "/multiple[1]",
      remote: undefined,
      slug: "multiple",
    },
  },
  {
    content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Default title</title>
    </head>
    <body>
      <main>Content page 3</main>
    </body>
  </html>
  ',
    data: {
      children: "Content page 3",
      content: "Content page 3",
      date: [],
      layout: "layout.js",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(1)",
      url: "/multiple/3.html",
    },
    src: {
      asset: undefined,
      ext: ".page.js",
      path: "/multiple[2]",
      remote: undefined,
      slug: "multiple",
    },
  },
  {
    content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Module example</title>
    </head>
    <body>
      <main>
    <h1>Module example</h1>
    <nav>
      <a class="home" href="http://localhost/">Back to home</a>
    </nav>
    <div>
      
<p>This is a simple page.</p>
<a class="link-1" href="/">Go to home page</a>
<a class="link-2" href="/simple-page-new-permalink.html">Go to simple page</a>

    </div>
  </main>
    </body>
  </html>
  ',
    data: {
      children: '
    <h1>Module example</h1>
    <nav>
      <a class="home" href="http://localhost/">Back to home</a>
    </nav>
    <div>
      
<p>This is a simple page.</p>
<a class="link-1" href="/">Go to home page</a>
<a class="link-2" href="/simple-page-new-permalink.html">Go to simple page</a>

    </div>
  ',
      content: "default",
      date: [],
      layout: "layout.js",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(0)",
      title: "Module example",
      url: "/simple-page-new-permalink.html",
    },
    src: {
      asset: undefined,
      ext: ".page.js",
      path: "/simple",
      remote: undefined,
      slug: "simple",
    },
  },
]
`;

snapshot[`Filter pages (allow only /multiple/*) 1`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".page.ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".page.js",
      loader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".page.jsonc",
      loader: [AsyncFunction: json],
    },
    {
      engines: undefined,
      ext: ".page.json",
      loader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".jsonc",
    },
    {
      engines: 1,
      ext: ".md",
      loader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
      loader: [AsyncFunction: module],
    },
    {
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
      loader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".njk",
      loader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: toml],
      engines: undefined,
      ext: ".toml",
      loader: [AsyncFunction: toml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      loader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      loader: [AsyncFunction: yaml],
    },
  ],
  src: [
    "/",
    "/_includes",
    "/_includes/layout.js",
    "/multiple-async.page.js",
    "/multiple.page.js",
    "/simple.page.js",
  ],
}
`;

snapshot[`Filter pages (allow only /multiple/*) 2`] = `[]`;

snapshot[`Filter pages (allow only /multiple/*) 3`] = `
[
  {
    content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Page 1</title>
    </head>
    <body>
      <main>Content page 1</main>
    </body>
  </html>
  ',
    data: {
      children: "Content page 1",
      content: "Content page 1",
      date: [],
      layout: "layout.js",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(1)",
      title: "Page 1",
      url: "/multiple/1.html",
    },
    src: {
      asset: undefined,
      ext: ".page.js",
      path: "/multiple[0]",
      remote: undefined,
      slug: "multiple",
    },
  },
  {
    content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Default title</title>
    </head>
    <body>
      <main>Content page 2</main>
    </body>
  </html>
  ',
    data: {
      children: "Content page 2",
      content: "Content page 2",
      date: [],
      layout: "layout.js",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(1)",
      url: "/multiple/2.html",
    },
    src: {
      asset: undefined,
      ext: ".page.js",
      path: "/multiple[1]",
      remote: undefined,
      slug: "multiple",
    },
  },
  {
    content: '
  <!DOCTYPE html>
  <html lang="en">
    <head>
      <meta charset="utf-8">
      <title>Default title</title>
    </head>
    <body>
      <main>Content page 3</main>
    </body>
  </html>
  ',
    data: {
      children: "Content page 3",
      content: "Content page 3",
      date: [],
      layout: "layout.js",
      mergedKeys: [
        "tags",
      ],
      page: [
        "src",
        "data",
      ],
      paginate: "paginate",
      search: [],
      tags: "Array(1)",
      url: "/multiple/3.html",
    },
    src: {
      asset: undefined,
      ext: ".page.js",
      path: "/multiple[2]",
      remote: undefined,
      slug: "multiple",
    },
  },
]
`;
